fix: footer-widget spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11834,14 +11834,9 @@ ul.children {
   padding-left: 0;
   flex-wrap: wrap;
 }
-@media (max-width: 991px) {
-  .footer-bottom-menu ul {
-    justify-content: flex-start;
-    gap: 0 20px;
-  }
-}
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .footer-bottom-menu ul {
+    gap: 0 20px;
     justify-content: center;
   }
 }
@@ -11872,7 +11867,7 @@ ul.children {
     padding: 30px 0;
   }
 }
-@media (max-width: 767px) {
+@media only screen and (min-width: 0px) and (max-width: 767px) {
   .footer-bottom-area .copyright-text {
     margin-bottom: 20px;
     text-align: center;
