--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -337,11 +337,11 @@
     padding-left: 0;
     flex-wrap: wrap;
     
-    @include rmaxwd(991) {
-      justify-content: flex-start;
-      gap: 0 20px;
-    }
+    // @include(991)  {
+    //   justify-content: flex-start;
+    // }
     @include md{
+      gap: 0 20px;
       justify-content: center;
     }
     @include lg{
@@ -374,7 +374,7 @@
     padding: 30px 0;
   }
   .copyright-text {
-    @include rmaxwd(767) {
+    @include sm {
       margin-bottom: 20px;
       text-align: center;
     }
